# learning

./: .gitignore  README.md  convert_notebooks.sh
Arduino/: README.md  led_on_off.c
AutoGen/: basic.py
Boto3/: main.py
C/: README.md
C-Sharp/: Program.cs  README.md  important.cs
Cython/: main.c  main.pyx  setup.py  test.py
Dart/: README.md
Data-Structures-Algorithms/: .gitignore  LICENSE  offer_and_negotiation.md
Design_Patterns/: ChainOfResponsibility01.py  DecoratorPattern00.py  DecoratorPattern01.py  StatePattern00.py  StatePattern01.py  StrategyPattern00.py
Docker/: Makefile  docker-swarm.yml
Groq/: README.md
Java/: Array.java  Array_List.java  Car2.java  Car3.java  Car4.java  Car5.java  Constructor.java  Dog.java  Final.java  For.java  Friend.java  Garage.java  Maths.java  Methods.java  OOP.java  Operators.java  OverLoading.java  Person.java  SuperKeyword.java  TwoDArrayList.java  TwoDimArray.java  UserInput.java  Vehicle.java  Vehicle1.java  WrapperClass.java
Nvim/: TodoList.jsx
OpenAI/: main.py
PDF/: main.py
Parallel Execution Mechanisms/: README.md
PyDantic/: 01.py  02.py
PyTorch-Lazy-Programmer/: README.md
Reducto/: basic.py
Ruff/: pyproject.toml
SQL/: README.md  main.py  main.sql  main0.sql  main1.sql
Scrapers/: pdf.py  playwright.py  pyproject.toml  recipe-scrapers.py  scrapegraphai.py
Scrapers/archive/: pyppeteer.py  scrapling.py
Structlog/: README.md  dropper.py  pure_logger.py  test.py
Tenacity/: README.md  advanced.py
Typescript/: 02-object-param.problem.ts  03-optional-properties.problem.ts  README.md  (+13 more)
(+718 files in other folders)
