[project]
name = "scrapers"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "autoscraper>=1.1.14",
    "markdownify>=0.14.1",
    "recipe-scrapers>=15.4.0",
    "scrapegraph-py>=1.10.2",
    "scrapegraphai>=1.37.1",
    "scrapling>=0.2.93",
    "v>=1",
]
